--- a/index.html
+++ b/index.html
@@ -785,11 +785,14 @@
                 <span class="background-text">Contact Me</span>
                 <div class="contact-section">
                     <!-- Contact Me Form -->
-                    <form id="myForm" method="POST" 
-                    novalidate 
+                    <form 
+                    name="kurwa"
+                    id="myForm" 
+                    method="POST"
+                    onsubmit="submit" 
                     autocomplete="off" 
                     data-netlify="true">
-                    <!-- onsubmit="event.preventDefault(); validateForm()"  -->
+                    <!-- novalidate  onsubmit="event.preventDefault(); validateForm()"  -->
                     
             
                         <label for="name">Name: </label>
