--- a/index.html
+++ b/index.html
@@ -972,10 +972,10 @@
         <p> Created by Paweł Czarnecki</p>
       </div> 
   </div>
-  <div class="snackbar">
+    <div class="snackbar">
       Copied to Clipboard
   </div>  
-      <script src="./script.js"></script>
+      <script defer src="./script.js"></script>
       <script src="./music-player/music-player.js"></script>
   </body>
   </html>
