--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <p>For most of my project I use HTML, SCSS and JavaScript, for few I used React.js</p>
                 <p>More of my projects you can see on my Codepen profile or Github repositories</p>
                 <p>You can download my CV by clicking on button below</p>
-            <a href="./test.pdf" class="download" download>
+            <a href="./CV_Paweł_Czarnecki.pdf" class="download" download>
                 Download 
                 <span class="material-icons">
                 file_download
