adding meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <link rel="icon" href="Logo.png" type="image/gif" sizes="16x16">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="I'm Frontend Web Developer, in my projects I use JS, SCSS, HTML and currently I'm learning React">
+      <meta name="keyword" content="portfolio, javascript, developer, frontend">
       <link rel="stylesheet" href="./style.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
       <title>Portfolio Paweł Czarnecki</title>
@@ -1089,14 +1091,7 @@
                         method="POST"
                         autocomplete="off"
                         onsubmit="event.preventDefault(); validateForm()"
-                    >
-                    <!-- novalidate  
-                        data-netlify="true"
-
-                        https://stackoverflow.com/questions/44774293/how-to-send-data-to-php-after-validating-information-on-a-javascript-file
-                              -->
-                    
-            
+                    >       
                         <label for="name">Name: </label>
                         <input type="text" name="name" id="name">
                         <small class="error-message"></small>
